--- a/ethnode/webui/mixins/profile-card.jade
+++ b/ethnode/webui/mixins/profile-card.jade
@@ -2,7 +2,7 @@
 .profile-upper
 
     .profile-image(data-toggle="modal", data-target="#avatarModal")
-        img(src="images/dobri.png", alt="Dobri Stoilov")
+        img(src="", alt="")
         .text-on-image: p Change
 
     //- h2 Dobri Stoilov
@@ -11,7 +11,7 @@
     // Now... JSON data goes here. :(
 
     button.light-blue-background.hidden Connect
-    button.orange-background Accept
+    button.orange-background Hire ($50/hr)
     button.white-background Leave a Note
 
 // Profile description including a description about you. (dark-gray section)
