--- a/ethnode/webui/styles/modals.sass
+++ b/ethnode/webui/styles/modals.sass
@@ -42,96 +42,96 @@
                     span
                         font-size: 40px
 
-            .modal-body
-                padding-top: 20px
-                padding-right: 0
-                padding-left: 0
+            // .modal-body
+            //     padding-top: 20px
+            //     padding-right: 0
+            //     padding-left: 0
 
-                h3.publish-modal-heading
-                    color: #65a9fc
-                    font-size: 30px
-                    font-weight: 400
-                    text-align: center
-                    margin-bottom: 0
-                    margin-bottom: 100px
-                    display: none
+            //     h3.publish-modal-heading
+            //         color: #65a9fc
+            //         font-size: 30px
+            //         font-weight: 400
+            //         text-align: center
+            //         margin-bottom: 0
+            //         margin-bottom: 100px
+            //         display: none
 
-                h4.publish-modal-description
-                    color: #606467
-                    font-size: 18px
-                    font-weight: 400
-                    text-align: center
-                    margin-top: 30px
-                    margin-bottom: 0
-                    padding: 0 200px
-                    display: none
+            //     h4.publish-modal-description
+            //         color: #606467
+            //         font-size: 18px
+            //         font-weight: 400
+            //         text-align: center
+            //         margin-top: 30px
+            //         margin-bottom: 0
+            //         padding: 0 200px
+            //         display: none
 
-                .form-group
-                    position: relative
-                    padding-left: 20px
-                    padding-right: 15px
+                // .form-group
+                //     position: relative
+                //     padding-left: 20px
+                //     padding-right: 15px
 
-                    [type=file]
-                        position: absolute
-                        filter: alpha(opacity = 0)
-                        opacity: 0
+                //     [type=file]
+                //         position: absolute
+                //         filter: alpha(opacity = 0)
+                //         opacity: 0
 
-                    [type=file] + label
-                        border: 1px solid #CCC
-                        border-radius: 3px
-                        text-align: left
-                        padding: 155px 0 0 0
-                        width: 170px
-                        height: 155px
-                        font-weight: 300
-                        position: relative
-                        text-align: center
-                        background: #f5f6fa
-                        color: #91969c
-                        border: none
-                        cursor: pointer
+                //     [type=file] + label
+                //         border: 1px solid #CCC
+                //         border-radius: 3px
+                //         text-align: left
+                //         padding: 155px 0 0 0
+                //         width: 170px
+                //         height: 155px
+                //         font-weight: 300
+                //         position: relative
+                //         text-align: center
+                //         background: #f5f6fa
+                //         color: #91969c
+                //         border: none
+                //         cursor: pointer
 
-                        &:hover,
-                        &:focus,
-                        &:active
-                            background: #dfe0e4
-                            color: #8b8f94
+                //         &:hover,
+                //         &:focus,
+                //         &:active
+                //             background: #dfe0e4
+                //             color: #8b8f94
 
-                    img.file-input-first-image
-                        position: absolute
-                        z-index: 100
-                        top: -15px
-                        left: 0
-                        right: 0
-                        bottom: 0
-                        margin: auto
-                        pointer-events: none
+                //     img.file-input-first-image
+                //         position: absolute
+                //         z-index: 100
+                //         top: -15px
+                //         left: 0
+                //         right: 0
+                //         bottom: 0
+                //         margin: auto
+                //         pointer-events: none
 
-                    input#input-image-avatar + label
-                        width: 200px
-                        height: 200px
-                        padding: 200px 0 0 0
+                //     input#input-image-avatar + label
+                //         width: 200px
+                //         height: 200px
+                //         padding: 200px 0 0 0
 
-                    img#input-image-story,
-                    img#input-image-job,
-                    img#input-image-education,
-                    img#input-image-avatar
-                        position: absolute
-                        width: 152px
-                        height: 155px
-                        top: 0
-                        left: 20px
-                        z-index: 100
-                        display: none
+                //     img#input-image-story,
+                //     img#input-image-job,
+                //     img#input-image-education,
+                //     img#input-image-avatar
+                //         position: absolute
+                //         width: 152px
+                //         height: 155px
+                //         top: 0
+                //         left: 20px
+                //         z-index: 100
+                //         display: none
 
-                    img#input-image-avatar
-                        width: 200px
-                        height: 200px
+                //     img#input-image-avatar
+                //         width: 200px
+                //         height: 200px
 
 
-                .modal-inputs
-                    padding-right: 25px
-                    padding-left: 15px
+                // .modal-inputs
+                //     padding-right: 25px
+                //     padding-left: 15px
 
 
             .modal-footer
@@ -175,33 +175,33 @@
 .modal#inviteModal .modal-dialog .modal-content .modal-footer button.close-modal
     display: initial
 
-.modal-inputs, .post
-    input.title,
-    input.state,
-    input.city,
-    input.company,
-    textarea.description,
-    textarea.title,
-    input
-        border: none
-        appearance: none
-        outline: none
-        display: block
-        width: 100%
-        float: right
-        font-size: 16px
-        font-weight: 400
-        border-bottom: 2px solid #e4e8eb
-        color: #86939e
-        margin-top: 25px
-        resize: none
-        line-height: 1.44
-        font-family: 'Roboto', sans-serif
+// .modal-inputs, .post
+//     input.title,
+//     input.state,
+//     input.city,
+//     input.company,
+//     textarea.description,
+//     textarea.title,
+//     input
+//         border: none
+//         appearance: none
+//         outline: none
+//         display: block
+//         width: 100%
+//         float: right
+//         font-size: 16px
+//         font-weight: 400
+//         border-bottom: 2px solid #e4e8eb
+//         color: #86939e
+//         margin-top: 25px
+//         resize: none
+//         line-height: 1.44
+//         font-family: 'Roboto', sans-serif
 
-    input:first-child
-        margin-top: 0
+//     input:first-child
+//         margin-top: 0
 
-    p.symbols
-        color: #a4a5a7
-        float: right
-        font-size: 12px
+//     p.symbols
+//         color: #a4a5a7
+//         float: right
+//         font-size: 12px
