Created EDIT JOB modal. BS MD Picker doesn't work as expected for End Date. Need to add 'is-dirty' on change.

--- a/ethnode/webui/mixins/jobs/default-job.jade
+++ b/ethnode/webui/mixins/jobs/default-job.jade
@@ -5,15 +5,15 @@
         .dont-have-logo PA
 
     .position-information
-        h4 Charles Schwab Corp.
-        h5 Data Migration Architect
-        p 5/2015 - Present (1y 5m)
+        h4.company-name Charles Schwab Corp.
+        h5.position-name Data Migration Architect
+        p.date-name 5/2015 - Present (1y 5m)
 
 .job-description.col-lg-8.col-md-7.col-sm-8.col-xs-12
     button#demo-menu-lower-right.mdl-button.mdl-js-button.mdl-button--icon.dropdown-button: i.material-icons more_vert
     ul.mdl-menu.mdl-menu--bottom-right.mdl-js-menu.mdl-js-ripple-effect(for="demo-menu-lower-right")
         li.mdl-menu__item.open-modal(open-modal="#add-job") Create Job
-        li.mdl-menu__item(disabled) Edit Job
+        li.mdl-menu__item.open-modal(open-modal="#edit-job") Edit Job
         li.mdl-menu__item(disabled) Delete
 
-    p I worked on a major data migration project
+    p.description-name I worked on a major data migration project
