--- a/ethnode/webui/styles/newstyles/modals-content.sass
+++ b/ethnode/webui/styles/newstyles/modals-content.sass
@@ -38,6 +38,7 @@
 
                 button:not(.close-button)
                     color: #5CAB7D
+                    // color: #92A8D1
 
                 &.active
                     opacity: 1
